--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <header class="logos">
         <div class="logos-container">
-        <img src="/imgs/logos/IPF-2022.png" alt="">
-        <img src="imgs/logos/Fecomércio-MS-2022.png" alt="">
+        <img class="log1" src="/imgs/logos/IPF-2022 remaster.png" alt="">
+        <img class="log2" src="imgs/logos/Fecomércio-MS-2022.png" alt="">
         </div>
     </header>
     <div class="content">
